# NewSpri

./: .gitignore  .pre-commit-config.yaml  ALT1_SHORTCUT_FIX.md  ANIMATION_SPLITTING_README.md  CLAUDE.md  CODE_REVIEW_FINAL.md  EXPORT_WORKFLOW_FIX.md  IMPROVED_UI_CHANGES.md  IMPROVEMENTS.md  KEYBOARD_MODIFIER_FIX.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  SEGMENT_EXPORT_FIX_SUMMARY.md  SEGMENT_EXPORT_IMPROVEMENTS.md  SELECTION_FIX.md  SPRITE_VIEWER_REFACTORING_PLAN.md  Specs.md  TODO_maintainability_review.md  UI_GROWTH_FIX.md  WEB_UI_README.md  WSL_LLM_GUIDE.md  action_manager.py  animation_grid_view.py  animation_segment_manager.py  auto_detection_controller.py  ccl_detection.py  command_system.py  config.py  create_test_sprite.py  debug_detection_simple.py  debug_dimensions_only.py  debug_lancer_detection.py  debug_lancer_scoring.py  (+59 more)
.github/workflows/: tests.yml
coordinators/: __init__.py  animation_coordinator.py  base.py  dialog_coordinator.py  event_coordinator.py  export_coordinator.py  signal_coordinator.py  sprite_load_coordinator.py  ui_setup_helper.py  view_coordinator.py
core/: __init__.py  animation_controller.py  animation_segment_controller.py  auto_detection_controller.py  export_coordinator.py  file_controller.py
docs/internal/: api-surface-review.md  maintainability-plan.md
export/: __init__.py  export_coordinator.py  export_dialog.py  export_dialog_wizard.py  export_dialog_wizard_integrated.py  export_preset_widget.py  export_presets.py  export_preview_step.py  export_preview_widget.py  export_settings_preview_step.py  export_settings_step.py  export_settings_step_simple.py  export_type_step.py  export_type_step_simple.py  frame_exporter.py  sprite_preview_widget.py
export/core/: __init__.py  export_handler.py  export_mode_registry.py  export_mode_spec.py  export_presets.py  frame_exporter.py
export/dialogs/: __init__.py  export_mode_ui_registry.py  export_preview_renderer.py  export_settings_data.py  export_wizard.py  modern_settings_preview.py  progress_dialog.py  type_selection.py
export/steps/: __init__.py  modern_settings_preview.py  settings_preview.py  type_selection.py
export/widgets/: __init__.py  frame_selection.py  layout_config.py  preset_widget.py  preview_widget.py  progress_dialog.py  segment_handling.py  selection_widgets.py  settings_widgets.py  sprite_preview_widget.py
managers/: __init__.py  action_manager.py  animation_segment_manager.py  base_manager.py  menu_manager.py  recent_files_manager.py  settings_manager.py  shortcut_manager.py
sprite_model/: __init__.py  core.py  core_integrated.py  extraction_mode.py  extraction_strategies.py  file_operations.py  sprite_animation.py  sprite_ccl.py  sprite_detection.py  sprite_extraction.py  sprite_file_ops.py
sprite_model/animation/: __init__.py  state_manager.py
sprite_model/ccl/: __init__.py  ccl_operations.py
sprite_model/detection/: __init__.py  coordinator.py  frame_detector.py  margin_detector.py  spacing_detector.py
sprite_model/extraction/: __init__.py  background_detector.py  ccl_extractor.py  grid_extractor.py
sprite_model/file_operations/: __init__.py  file_loader.py  file_validator.py  metadata_extractor.py
static/: index.html
tests/: README.md  __init__.py  conftest.py  conftest_full.py  requirements-test.txt  test_export_dialog_integration.py  test_infrastructure.py  test_phase4_performance.py  test_phase4_visual_preview.py
tests/fixtures/: __init__.py  common_fixtures.py  detection_cases.py  qt_mocks.py  real_image_factory.py  real_sprite_system.py  sprite_sheets.py
tests/integration/: __init__.py  conftest.py  test_animation_splitting_mock.py  test_animation_splitting_workflow.py  test_ccl_ark_simple.py  test_ccl_extraction_real_data.py  test_ccl_success_summary.py  test_ccl_ui_availability.py  test_complete_user_workflows.py  test_component_integration.py  test_concurrent_operations.py  test_end_to_end_workflows.py  test_error_scenarios.py  test_export_integrated_workflow.py  test_export_settings_integration.py  test_export_wizard_realistic.py  test_export_wizard_simple.py  test_export_wizard_workflow.py  test_manager_integration.py  test_missing_workflows.py  test_playback_controls_integration.py  test_segment_lifecycle.py  test_segment_persistence.py  test_segment_preview_integration.py  test_signal_connections.py  test_simplified_export_wizard.py  test_sprite_loading_workflow.py  test_sprite_viewer_init.py  test_state_consistency.py  test_ultimate_integration_victory.py  test_viewer_state_synchronization.py
tests/ui/: __init__.py  test_animation_grid_view.py  test_animation_segment_preview.py  test_animation_segment_widget.py  test_existing_shortcuts.py  test_export_dialog.py  test_export_wizard.py  test_frame_extractor.py  test_menu_actions.py  test_playback_controls.py  test_sprite_canvas.py
tests/unit/: __init__.py  test_action_manager.py  test_animation_controller.py  test_animation_coordinator.py  test_animation_segment_bounce_holds.py  test_animation_segment_controller.py  test_animation_timer_state_machine.py  test_api_surface.py  test_ccl_mode_switching.py  test_config.py  test_controller_initialization.py  test_coordinators.py  test_detection_algorithms.py  test_dialog_coordinator.py  test_event_coordinator.py  test_export_coordinator.py  test_export_infrastructure.py  test_export_mode_registry.py  test_export_mode_ui_registry.py  test_export_presets.py  (+29 more)
tools/: README.md  verify_animation_imports.py  verify_export_consolidation.py  verify_export_dialog_fix.py  verify_export_fixes.py  verify_segment_fixes.py  verify_segment_naming.py
ui/: __init__.py  animation_grid_view.py  animation_segment_preview.py  animation_segment_widget.py  collapsible_section.py  enhanced_status_bar.py  frame_extractor.py  playback_controls.py  sprite_canvas.py  validation_widgets.py
utils/: __init__.py  extraction_modes.py  scoring_system.py  sprite_rendering.py  styles.py  ui_common.py
(+6 files in other folders)
