[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sprite-viewer"
version = "2.0.0"
description = "Professional PySide6-based sprite sheet animation viewer and editor"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.11.0",
    "numpy>=2.4.4",
    "Pillow>=12.2.0",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-qt>=4.5.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.12",
    "basedpyright>=1.39.3",
    "skylos>=4.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = [".", "coordinators", "core", "export", "managers", "sprite_model", "ui", "utils"]
exclude = [
    "venv",
    ".venv",
    "archive",
    "tools",
    "web_backend",
    "web_frontend",
    "build",
    "dist",
    ".tox",
    "__pycache__",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "A",      # flake8-builtins (shadow detection)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "FLY",    # flynt (f-string conversion)
    "PERF",   # Perflint (performance anti-patterns)
    "PIE",    # flake8-pie (misc. lint)
    "PLE",    # Pylint errors
    "RSE",    # flake8-raise
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (common in Qt)
    "SIM108", # ternary operator (readability preference)
    "RUF001", # ambiguous unicode (× multiplication sign is intentional)
    "RUF002", # ambiguous unicode in docstring
    "RUF003", # ambiguous unicode in comment
    "A002",   # function argument shadows builtin (`format` is standard in export code)
    "RUF012", # mutable class attributes (ClassVar annotation is pedantic)
]

[tool.ruff.lint.isort]
known-first-party = ["config", "coordinators", "core", "export", "managers", "sprite_model", "ui", "utils", "tools"]

[tool.ruff.lint.per-file-ignores]
"tests/**/conftest.py" = ["F401", "F811"]  # fixture re-exports and redefinitions
"tests/fixtures/*.py" = ["F401"]           # shared fixture modules
"tests/**" = [
    "E402",    # late imports (after sys.path manipulation)
    "E712",    # == True/False (explicit in assertions)
    "F841",    # unused variables (side-effect objects, spies)
    "RUF059",  # unused unpacked variables (partial tuple unpacking)
    "SIM105",  # contextlib.suppress (readability preference)
    "SIM221",  # expr-or-not-expr
    "TC003",   # typing-only imports (not worth in tests)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = [
    "config.py",
    "sprite_viewer.py",
    "coordinators",
    "core",
    "export",
    "managers",
    "sprite_model",
    "ui",
    "utils",
]
exclude = [
    "**/venv",
    "**/.venv",
    "**/archive",
    "**/tests",
    "**/web_backend",
    "**/web_frontend",
    "**/build",
    "**/dist",
    "**/.tox",
    "**/__pycache__",
    "**/.ruff_cache",
    "**/node_modules",
]
# Standard mode + cherry-picked strict rules
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportDeprecated = true
reportDuplicateImport = true
reportUnnecessaryCast = true
reportUnnecessaryIsInstance = true
reportUnnecessaryComparison = true
reportMissingParameterType = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["archive", "build", "dist", ".tox", "venv", "__pycache__"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
    "--tb=short",
    "--durations=10",
    "--ignore=archive/",
    "--timeout=30",
    "--timeout-method=thread",
]
markers = [
    "unit: Unit tests (fast, isolated components)",
    "integration: Integration tests (multi-component workflows)",
    "ui: UI component tests (requires Qt/display)",
    "performance: Performance and load tests",
    "slow: Tests that take more than 2 seconds",
    "smoke: Critical functionality smoke tests",
    "regression: Regression tests for bug fixes",
    "requires_files: Tests requiring test sprite files or file I/O",
    "memory_intensive: Tests that use significant memory",
    "requires_qt: Tests requiring Qt event loop",
    "requires_threading: Tests with threading/async operations",
    "platform_specific: Platform-specific tests",
    "signal_test: Tests for Qt signal/slot connections",
    "benchmark: Performance benchmark tests",
    "sprite_model: Tests for sprite model components",
    "animation: Animation system tests",
    "detection: Auto-detection algorithm tests",
    "file_ops: File operation tests",
    "config: Configuration system tests",
    "export_integration: Export dialog integration tests",
    "requires_display: Tests requiring GUI display",
    "serial: Tests that must not run in parallel (e.g. real-thread workers)",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::PendingDeprecationWarning",
    "ignore:.*QApplication.*:DeprecationWarning",
    "ignore:.*Qt.*:DeprecationWarning",
    "ignore:.*PySide6.*:DeprecationWarning",
    "ignore:.*shiboken6.*:DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "venv/*",
    "__pycache__/*",
    "*.pyc",
    "tests/*",
    "archive/*",
    "build/*",
    "dist/*",
    ".tox/*",
    "setup.py",
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.skylos]
complexity = 10
nesting = 3
max_args = 5
max_lines = 50
duplicate_strings = 3
model = "gpt-4.1"
exclude = [
    ".benchmarks",
    ".claude",
    ".ruff_cache",
    ".serena",
    ".skylos",
    ".sprite_segments",
    "SpriteSheets",
    "archive",
    "docs",
    "htmlcov",
    "spritetests",
    "sprite_exports",
    "tests",
    "tools",
    "web_backend",
    "web_frontend",
]
ignore = []

[tool.skylos.masking]
names = []
decorators = []
bases = []

[tool.skylos.whitelist]
names = []

[tool.skylos.whitelist.documented]

[tool.skylos.whitelist.temporary]

[tool.skylos.gate]
fail_on_critical = true
max_critical = 0
max_high = 5
max_security = 0
max_quality = 10
strict = false
